removing extra files

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -20,9 +20,9 @@
 
            <form action="/search" method="GET" class="glass-search-form">
                  <div class="glass-search-container">
-                    <input type="search" name="q" placeholder="Search..." class="glass-search-input">
+                    <input type="search" placeholder="Search..." class="glass-search-input">
                         <button type="submit" class="glass-search-button">
-                            <img src="images/search_icon.png" width="30px" alt="Go">
+                            <img src="images/search_icon.png" width="30px" alt="Go" id="search_icon">
                         </button>
                 </div>
             </form>
