--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -30,11 +30,25 @@
         </ul>  
     </navbar>
 
+
+
 <div id="title">
         <h1>
             Travel Bloom
         </h1>
 </div> 
+
+<div class="bgImage">
+    <img src="images/city1.jpg" alt="" srcset="">
+</div>
+
+<div class="container">
+    <div class="item-1">1</div>
+    <div class="item-2">2</div>
+    <div class="item-3">3</div>
+    <div class="item-4">4</div>
+
+</div>
 
 
 <script src="./travel_recommendation.js"></script>    
