--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -43,10 +43,9 @@
 </div>
 
 <div class="container">
-    <div class="item-1">1</div>
-    <div class="item-2">2</div>
-    <div class="item-3">3</div>
-    <div class="item-4">4</div>
+    <div class="item-0"> Travel With Bloom</div>
+    <div class="item-1">Welcome to Travel Bloom where your next destination is closer to you. Here you can search and find all the information you need about places.</div>
+
 
 </div>
 
