--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -39,7 +39,7 @@
 </div> 
 
 <div class="bgImage">
-    <img src="images/city1.jpg" alt="" srcset="">
+    <img src="images/city1.jpg" alt="landscape_image" srcset="">
 </div>
 
 <div class="container">
@@ -47,6 +47,14 @@
     <div class="item-1">Welcome to Travel Bloom where your next destination is closer to you. Here you can search and find all the information you need about places.</div>
 
 
+</div>
+
+<div class="social_icons">
+    <img src="./images/youtube.png" class="icons" alt="" srcset="">
+    <img src="./images/twitter.png" class="icons" alt="" srcset="">
+    <img src="./images/tiktok.png" class="icons" alt="" srcset="">
+    <img src="./images/instagram.png" class="icons" alt="" srcset="">
+    
 </div>
 
 
