updating home page

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -43,8 +43,8 @@
 </div>
 
 <div class="container">
-    <div class="item-0"> Travel With Bloom</div>
-    <div class="item-1">Welcome to Travel Bloom where your next destination is closer to you. Here you can search and find all the information you need about places.</div>
+    
+    <div class="item-2"><strong>Welcome to Travel Bloom where your next destination is closer to you. Here you can search and find all the information you need about places.</strong></div>
 
 
 </div>
