updating the about us page

--- a/about_us.html
+++ b/about_us.html
@@ -16,10 +16,13 @@
            
         </ul>  
     </navbar>
-
+<div class="bgImage">
+    <img src="images/city5.jpg" style="filter: blur(2px);" alt="landscape_image" srcset="">
+</div>
 <h1 class="about_us">About Us</h1>
 
-<div class="social_icons">
+<div class="about_container">
+    <div class="social_icons">
     <img src="./images/youtube.png" class="icons" alt="" srcset="">
     <img src="./images/twitter.png" class="icons" alt="" srcset="">
     <img src="./images/tiktok.png" class="icons" alt="" srcset="">
@@ -27,6 +30,31 @@
     
 </div>
 
+    <div class="company_background">
+        <h3>
+        For eight years, Travel Bloom has been transforming travel dreams into unforgettable journeys. We are a boutique online travel service, powered by a dedicated team of three passionate explorers who believe that the right trip can be a profound source of joy, connection, and growth.
+
+    Our small size is our superpower. As a tight-knit trio, we pour our collective expertise, creativity, and personal care into every itinerary we craft and every traveler we assist. With over two decades of combined experience in the travel industry, we’ve cultivated deep connections and insider knowledge that allow us to design unique experiences far beyond the reach of ordinary booking sites.
+
+    At Travel Bloom, we see travel not as a commodity, but as a living, blooming experience. Just as a garden requires individual attention, we nurture each trip with a personal touch—from the first spark of inspiration to the joyful return home. We specialize in uncovering hidden gems, crafting seamless logistics, and ensuring that your adventure reflects your unique style, pace, and curiosity.
+
+    Our mission is simple: to help you travel deeper and bloom where you’re planted, even if just for a little while. We handle the details, so you can fully immerse yourself in the wonder of discovery.
+
+    Welcome to Travel Bloom. Let’s grow your next journey together.
+
+    The Bloom Team
+   
+
+ 
+    </h3>
+</div>
+</div>
+
+    <div class="team">
+        <img src="./images/prince.jpg" class="icons" alt="">
+        <img src="./images/clay.jpg" class="icons" alt="">
+        <img src="./images/raymond.jpg" class="icons" alt="">
+    </div>
 
 <script src="./travel_recommendation.js"></script>    
 </body>
