updating the about us page

--- a/about_us.html
+++ b/about_us.html
@@ -70,9 +70,9 @@
                 <div class="team-card">
             <img src="./images/prince.jpg" width=200px alt="image" >
             <div class="team-info">
-                <h3>Clay Peterson</h3>
-                <p class="role">Lead Developer</p>
-                <p class="bio">Full-stack specialist</p>
+                <h3>Prince Adoda</h3>
+                <p class="role">Web Developer</p>
+                <p class="bio">5+ years experience in frontend Development</p>
             </div>
         </div>
         
