adding fetch()API

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -21,7 +21,7 @@
            <form action="/search" method="GET" class="glass-search-form">
                  <div class="glass-search-container">
                     <input type="search" placeholder="Search..." class="glass-search-input">
-                        <button type="submit" onclick="searchInfo()" class="glass-search-button">
+                        <button type="submit" onclick="searchInfo()" class="glass-search-button" id="searchBtn">
                             <img src="images/search_icon.png" width="30px" alt="Go" id="search_icon">
                         </button>
                 </div>
