fixing the JSON file

--- a/contact_us.html
+++ b/contact_us.html
@@ -140,6 +140,7 @@
     </div>
 
     <script src="./travel_recommendation.js"></script>
+    <script src="./travel_form.js"></script>
     
 </body>
 </html>
