adding a blur effect when search results appear

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -38,7 +38,7 @@
         </h1>
 </div> 
 
-<div class="bgImage">
+<div class="bgImage" id="background">
     <img src="images/city4.jpg" alt="landscape_image" srcset="">
 </div>
 
