--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -20,7 +20,7 @@
 
            <form action="/search" method="GET" class="glass-search-form">
                  <div class="glass-search-container">
-                    <input type="search" placeholder="Search..." class="glass-search-input">
+                    <input type="search" placeholder="Search..." class="glass-search-input" id="searchInput">
                         <button type="submit" onclick="searchInfo()" class="glass-search-button" id="searchBtn">
                             <img src="images/search_icon.png" width="30px" alt="Go" id="search_icon">
                         </button>
