--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -24,8 +24,10 @@
                         <button type="submit" onclick="searchInfo()" class="glass-search-button" id="searchBtn">
                             <img src="images/search_icon.png" width="30px" alt="Go" id="search_icon">
                         </button>
+                        <button id="clearBtn" class="clear-button">Clear Results</button>
                 </div>
             </form>
+            
            
         </ul>  
     </navbar>
