renaming the home page to index.html for git pages

--- a/contact_us.html
+++ b/contact_us.html
@@ -11,7 +11,7 @@
     
     <navbar class="navbar">
         <ul class="navItems">
-            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about_us.html">About Us</a></li>
             <li><a href="./contact_us.html" class="current">Contact Us</a></li>
         </ul>  
