--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <navbar class="navbar">
         <ul class="navItems">
          
-                <li><a href="./travel_recommendation.html" class="current">Home</a></li>
+                <li><a href="./index.html" class="current">Home</a></li>
                 <li><a href="./about_us.html">About Us</a></li>
                 <li><a href="./contact_us.html">Contact Us</a></li>
            
