fixing the about-us page layout and adding breakpoints

--- a/about_us.html
+++ b/about_us.html
@@ -29,7 +29,7 @@
     <img src="images/city3.jpg"  alt="landscape_image" srcset="">
 </div>
 
-<div class="container">
+<div class="about-container">
     
     <div class="item-3"><strong>For eight years, Travel Bloom has been transforming travel dreams into unforgettable journeys. We are a boutique online travel service, powered by a dedicated team of three passionate explorers who believe that the right trip can be a profound source of joy, connection, and growth.
 
@@ -51,7 +51,7 @@
         <div class="team-card">
             <img src="./images/raymond.jpg" class='teamImg' width="200px" alt="image">
             <div class="team-info">
-                <h3>Raymond Makola</h3>
+                <h3>Raymond Makola</h3><br>
                 <p class="role">Marketing Director</p>
                 <p class="bio">10+ years in digital marketing</p>
             </div>
@@ -61,7 +61,7 @@
         <div class="team-card">
             <img src="./images/clay.jpg" class='teamImg' width=200px alt="image" >
             <div class="team-info">
-                <h3>Clay Peterson</h3>
+                <h3>Clay Peterson</h3><br>
                 <p class="role">Lead Developer</p>
                 <p class="bio">Full-stack specialist</p>
             </div>
@@ -70,7 +70,7 @@
                 <div class="team-card">
             <img src="./images/prince.jpg" class='teamImg' width=200px alt="image" >
             <div class="team-info">
-                <h3>Prince Adoda</h3>
+                <h3>Prince Adoda</h3><br>
                 <p class="role">Web Developer</p>
                 <p class="bio">5+ years experience</p>
             </div>
