fixing the search input

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             Travel Bloom
         </h1>
 </div> 
+<button onclick="toggle()">
+    <p>light</p>
+</button>
 
 <div class="bgImage" id="background">
     <img src="images/city4.jpg" alt="landscape_image" srcset="">
