--- a/about_us.html
+++ b/about_us.html
@@ -11,7 +11,7 @@
     <navbar class="navbar">
         <ul class="navItems">
          
-                <li><a href="./index.html"></a></li>
+                <li><a href="./index.html"></a>Home</li>
                 <li><a href="./about_us.html" class="current">About Us</a></li>
                 <li><a href="./contact_us.html">Contact Us</a></li>
         </ul>  
