--- a/about_us.html
+++ b/about_us.html
@@ -13,7 +13,7 @@
          
                 <li><a href="./index.html"></a>Home</li>
                 <li><a href="./about_us.html" class="current"></a>About Us</li>
-                <li><a href="./contact_us.html">Contact Us</a></li>
+                <li><a href="./contact_us.html"></a></li>
             
         </ul>  
     </navbar>
